fix: image not scale properly on mobile view

--- a/css/travel.css
+++ b/css/travel.css
@@ -5,8 +5,6 @@
   }
   
 .gallery img{
-    border-radius: 1vw;
-    border: 1vw solid #36a66863;
+
     width: 100%;
-    margin: 10px;
   } 
